# cad

./: .gitignore  flake.nix  pyproject.toml  skadis_bin.step
src/hello_world/: __init__.py  desk_cable.py  dogbowl.py  enclosures.py  pegboard.py  skadis_shelf.py  snippets.py
src/hello_world/util/: layout.py  pattern.py  skadis.py  skadis_hook.py
