[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bd-warehouse",
    "build123d",
    "ocp-vscode>=2.6.1",
    "urllib3>=2.2.3",
    "vtk==9.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
build123d = { git = "https://github.com/gumyr/build123d" }
bd-warehouse = { git = "https://github.com/gumyr/bd_warehouse" }

